# di-server

./: Cargo.toml
benches/: server.rs
crates/dargs/: Cargo.toml
crates/dargs/src/: args.rs  lib.rs
crates/dclient/: Cargo.toml
crates/dclient/src/: lib.rs
crates/dhttp/src/: header.rs  lib.rs  method.rs
crates/dpool/: Cargo.toml
crates/dpool/src/: lib.rs
dargs/: Cargo.toml
dargs/src/: args.rs  derive.rs  lib.rs
dclient/: Cargo.toml
dclient/src/: config.rs
dhttp/: Cargo.toml
dhttp/src/: header.rs
dpool/: Cargo.toml
dpool/src/: lib.rs
src/: args.rs  cli.rs  client.rs  error.rs  http.rs  lib.rs  main.rs  pool.rs  request.rs  response.rs  route.rs  server.rs  tcp.rs  udp.rs
src/client/: config.rs  tcp.rs  udp.rs
src/http/: cookie.rs  method.rs
src/server/: config.rs  state.rs
static/: index.html
tests/: server.rs
