[package]
name = "dsrv"
version = "0.1.0"
authors = ["Chris P <chrisp1877@gmail.com>"]
edition = "2018"
default_run = "server"

[lib]
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slog = "*"
slog-term = "*"
slog-async = "*"
url = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
futures = ""

dpool = { path = "./crates/dpool" }
dargs = { path = "./crates/dargs" }
dhttp = { path = "./crates/dhttp" }

[dev-dependencies]
criterion = "*"
env_logger = "*"

# [build-dependencies]
# protoc-rust-grpc = "*"

[profile.dev]
opt="z"
