[package]
name = "dsrv"
version = "0.1.0"
authors = ["Chris P <chrisp1877@gmail.com>"]
edition = "2018"
default_run = "server"

[lib]
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bench]]
name = "server"
harness = false
path = "benches/server.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
url = "*"
bytes = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
chrono = "*"
futures-util = "*"
lazy_static = "*"


dpool = { path = "./crates/dpool" }
dargs = { path = "./crates/dargs" }
dhttp = { path = "./crates/dhttp" }

[dev-dependencies]
criterion = "*"
env_logger = "*"

# [build-dependencies]
# protoc-rust-grpc = "*"

[profile.dev]
opt="z"
